main.css.scss:fixed z-index

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -85,6 +85,7 @@ h7 {
 	width: 100%;
 	background-color: #F7F7ED;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
+	z-index: 1;
 }
 .navbar-inner{
 	border-radius: 0px;
@@ -94,7 +95,7 @@ h7 {
 .container{
 	width: 940px;
 	margin: 0px auto;
-	padding-top: 50px;
+	padding-top: 70px;
 }
 header{
 	width: 940px;
